Fix overflow: hidden and padding-right bug. Where do they come from? 🤷‍

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,3 +6,7 @@
   height: 100vh;
 }
 
+html {
+  overflow: auto !important;
+  padding-right: 0 !important;
+}
